<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorQuaseBranco">

    <FrameLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/novo_carro_text"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="23dp"
            android:fontFamily="sans-serif"
            android:text="NOVO CARRO"
            android:textColor="@color/colordarkred"
            android:textSize="20dp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/novo_carro_fabricante_input"
            android:layout_width="320sp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/editText"
            android:layout_alignBottom="@+id/editText"
            android:layout_alignEnd="@+id/editText8"
            android:layout_alignRight="@+id/editText8"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20sp"
            android:layout_marginTop="100dp"
            android:ems="10"
            android:hint="Fabricante"
            android:inputType="textPersonName"
            android:textColorHint="@color/colorPrimary" />


        <EditText
            android:id="@+id/novo_carro_ano_input"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editText"
            android:layout_alignStart="@+id/editText"
            android:layout_below="@+id/editText"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="150dp"
            android:ems="10"
            android:hint="Ano"
            android:inputType="textPersonName"
            android:textColorHint="@color/colorPrimary" />


        <Button
            android:id="@+id/novo_carro_cadastrar_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="400dp"

            android:background="@color/colorSalmao"
            android:text="Cadastrar"
            android:textColor="@color/colorWhite"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/novo_carro_modelo_input"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="50dp"
            android:layout_toLeftOf="@+id/button9"
            android:layout_toStartOf="@+id/button9"
            android:ems="10"
            android:hint="Modelo"
            android:inputType="textPersonName"
            android:textColorHint="@color/colorPrimary" />

        <EditText
            android:id="@+id/novo_carro_placa_input"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editText"
            android:layout_alignStart="@+id/editText"
            android:layout_below="@+id/editText"
            android:layout_marginLeft="200dp"
            android:layout_marginTop="150dp"
            android:ems="10"
            android:hint="Placa"
            android:inputType="textPersonName"
            android:textColorHint="@color/colorPrimary" />


        <EditText
            android:id="@+id/novo_carro_numero_passageiros_input"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editText"
            android:layout_alignStart="@+id/editText"
            android:layout_below="@+id/editText"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="200dp"
            android:ems="10"
            android:hint="Nº Passageiros"
            android:inputType="number"
            android:textColorHint="@color/colorPrimary" />



    </FrameLayout>
</LinearLayout>