<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorQuaseBranco">

    <ImageButton
        android:id="@+id/listar_carros_add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/listarcarrostt"
        android:layout_marginEnd="21dp"
        android:layout_marginTop="35dp"
        android:layout_weight="1"
        android:background="@color/colorQuaseBranco"
        app:srcCompat="@mipmap/ic_add" />

    <TextView
        android:id="@+id/listarcarrostt"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="15dp"
        android:fontFamily="sans-serif"
        android:text="Listar Carros"
        android:textSize="20dp"
        android:textColor="@color/colordarkred"
        android:textStyle="bold" />

    <ListView
        android:layout_marginTop="150dp"
        android:layout_marginLeft="10dp"
        android:id="@+id/listar_carros_lista"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </ListView>


</RelativeLayout>
