...
            android:background="@color/colorSalmao"
            android:layout_marginLeft="130dp"
            android:text="Clientes"
            android:textColor="@color/colorWhite"/>

        <Button
            android:id="@+id/carros_button"
            android:layout_width="124dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="170dp"
            android:layout_marginLeft="130dp"

            android:background="@color/colorSalmao"
            android:text="CARROS"
            android:textColor="@color/colorWhite"/>

        <Button
            android:id="@+id/contratos_button"
            android:layout_width="124dp"
            android:layout_height="wrap_content"
...
